; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/dec/prom/extr_identify.c_get_system_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/dec/prom/extr_identify.c_get_system_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_system_type.system = internal global [64 x i8] zeroinitializer, align 16
@get_system_type.called = internal global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"Digital %s\00", align 1
@dec_system_strings = common dso_local global i8** null, align 8
@mips_machtype = common dso_local global i64 0, align 8
@STR_BUF_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_system_type() #0 {
  %1 = load i32, i32* @get_system_type.called, align 4
  %2 = icmp eq i32 %1, 0
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  store i32 1, i32* @get_system_type.called, align 4
  %4 = load i8**, i8*** @dec_system_strings, align 8
  %5 = load i64, i64* @mips_machtype, align 8
  %6 = getelementptr inbounds i8*, i8** %4, i64 %5
  %7 = load i8*, i8** %6, align 8
  %8 = call i32 @snprintf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @get_system_type.system, i64 0, i64 0), i32 64, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %7)
  br label %9

9:                                                ; preds = %3, %0
  ret i8* getelementptr inbounds ([64 x i8], [64 x i8]* @get_system_type.system, i64 0, i64 0)
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
